Add git configuration for safe.directory in build container

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -223,6 +223,9 @@ jobs:
                 unset GOARM
               fi
 
+              # Allow git operations inside the container to access the mounted repo
+              git config --global --add safe.directory /work/coredns
+
               echo "Building for GOOS=${GOOS}, GOARCH=${GOARCH}, GOARM=${GOARM:-n/a}"
               make coredns
             '
