Skip flaky upstream integration tests in CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -212,7 +212,8 @@ jobs:
               go mod tidy
               make gen
               if [ "${RUN_TESTS}" = "1" ]; then
-                go test ./...
+                # Skip upstream integration tests that are known to be flaky in CI containers.
+                go test $(go list ./... | grep -v '^github.com/coredns/coredns/test$')
               fi
 
               export GOOS="${TARGET_GOOS}"
