--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,7 @@
 {
   "extends": ["config:recommended"],
   "timezone": "Europe/Berlin",
-  "schedule": ["* 16 * * 1,3,5"],
+  "schedule": ["0 16 * * 1,3,5"],
   "automerge": false,
   "enabledManagers": ["github-actions", "custom.regex"],
   "customManagers": [
