--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,13 +1,13 @@
 {
   "extends": ["config:recommended"],
   "timezone": "Europe/Berlin",
-  "schedule": ["0 16 * * 1,3,5"],
+  "schedule": ["after 3:59pm and before 4:01pm on monday, wednesday, friday"],
   "automerge": false,
   "enabledManagers": ["github-actions", "custom.regex"],
   "customManagers": [
     {
       "customType": "regex",
-      "fileMatch": ["^build-versions\\.json$"],
+      "managerFilePatterns": ["/^build-versions\\.json$/"],
       "matchStrings": [
         "\"coredns_tag\"\\s*:\\s*\"(?<currentValue>[^\"]+)\""
       ],
@@ -17,7 +17,7 @@
     },
     {
       "customType": "regex",
-      "fileMatch": ["^build-versions\\.json$"],
+      "managerFilePatterns": ["/^build-versions\\.json$/"],
       "matchStrings": [
         "\"fanout_tag\"\\s*:\\s*\"(?<currentValue>[^\"]+)\""
       ],
@@ -27,7 +27,7 @@
     },
     {
       "customType": "regex",
-      "fileMatch": ["^build-versions\\.json$"],
+      "managerFilePatterns": ["/^build-versions\\.json$/"],
       "matchStrings": [
         "\"go_image\"\\s*:\\s*\"(?<depName>docker\\.io/library/golang)(?::(?<currentValue>[^\"@]+))?(?:@(?<currentDigest>sha256:[a-f0-9]+))?\""
       ],
@@ -35,7 +35,7 @@
     },
     {
       "customType": "regex",
-      "fileMatch": ["^build-versions\\.json$"],
+      "managerFilePatterns": ["/^build-versions\\.json$/"],
       "matchStrings": [
         "\"runtime_base\"\\s*:\\s*\"(?<depName>gcr\\.io/distroless/static-debian12):(?<currentValue>[^\"@]+)(?:@(?<currentDigest>sha256:[a-f0-9]+))?\""
       ],
