Make coredns executable and list details in build context

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -290,6 +290,8 @@ jobs:
           mkdir -p build-context
           cp artifacts/Dockerfile build-context/Dockerfile
           cp artifacts/coredns-${{ matrix.arch }} build-context/coredns
+          chmod +x build-context/coredns
+          ls -l build-context/coredns
           file build-context/coredns
 
           case "${{ matrix.arch }}" in
